--- a/mod1_solutions/index.html
+++ b/mod1_solutions/index.html
@@ -23,8 +23,8 @@
          <div class="form-group">
              <button class="btn btn-default" ng-click="Checklist()">Check If Too Much</button>
          </div>
-         <div class="form-group message">
-           <p id="msg"></p>
+         <div class="form-group message" ng-model="msg">
+           {{msg}}
          </div>
    </div>
 
