--- a/mod5_solutions/src/public/info/info.html
+++ b/mod5_solutions/src/public/info/info.html
@@ -1,10 +1,4 @@
 <h1 class="center_align"> Your Information</h1>
-
-<!-- <div ng-if = "infoCtrl.getDetails.length">
-  <div ng-repeat = detail in infoCtrl.getDetails>
-    {{detail.firstName}}
-  </div>
-</div> -->
 <div ng-if="infoCtrl.getDetails.length">
   <table class="table table-sm table-inverse">
   <thead>
@@ -30,7 +24,7 @@
               <img class="img-responsive" width="250" height="150" ng-src="images/menu/{{detail.menuNumber}}.jpg" alt="{{detail.menuNumber}}">
             </div>
             <div class="col-sm-7">
-              <h3>{{infoCtrl.MenuItemInfo[$index]["name"]}}</h3>
+              <h3>{{infoCtrl.MenuItemInfo[$index]["name"]}} [ {{detail.menuNumber}} ]</h3>
               <p>{{infoCtrl.MenuItemInfo[$index]["description"]}}</p>
             </div>
           </div>
